Testing parasite config

--- a/config/SRParasites.cfg
+++ b/config/SRParasites.cfg
@@ -2062,49 +2062,49 @@ parasite_evolution_phases {
     B:"Evolution Phases"=true
 
     # From this phase on, Assimilated versions will stop hiding. [range: 0 ~ 9, default: 2]
-    I:"Phase Assimilation Stop Hiding"=3
+    I:"Phase Assimilation Stop Hiding"=0
 
     # From this phase on, Beckons will ignore their summoning cooldown when spawning. [range: 0 ~ 9, default: 5]
-    I:"Phase Beckon Summoning Cooldown"=3
+    I:"Phase Beckon Summoning Cooldown"=0
 
     # From this phase on, Colonies are unlocked. [range: 0 ~ 9, default: 6]
-    I:"Phase Colony Unlock"=5
+    I:"Phase Colony Unlock"=0
 
     # From this phase on, Nodes are unlocked. [range: 0 ~ 9, default: 5]
-    I:"Phase Node Unlock"=5
+    I:"Phase Node Unlock"=0
 
     # From this phase on, Parasites will ignore sunlight when  spawning naturally. [range: 0 ~ 9, default: 7]
-    I:"Phase Parasites Ignore Sunlight"=7
+    I:"Phase Parasites Ignore Sunlight"=0
 
     # From this phase on, Rupters will stop running away from other mobs and they will directly covert. [range: 0 ~ 9, default: 2]
-    I:"Phase Rupter Stop Hiding"=2
+    I:"Phase Rupter Stop Hiding"=0
 
     # From this phase on, you can't sleep anymore. [range: 0 ~ 9, default: 5]
-    I:"Phase Sleep Denied"=4
+    I:"Phase Sleep Denied"=0
 
     # Number of Points gained when a mob with COTH reaches amp +2. [range: 0 ~ 1000000, default: 6]
-    I:"Value for COTH"=6
+    I:"Value for COTH"=5000
 
     # Number of Points gained when using the merge system to spawn Primitive Parasites. [range: 0 ~ 1000000, default: 10]
-    I:"Value for Merging"=10
+    I:"Value for Merging"=5000
 
     # Number of Points gained when converting a block. [range: 0 ~ 1000000, default: 3]
-    I:"Value for blocks"=3
+    I:"Value for blocks"=5000
 
     # Number of Points gained each kill. [range: 0 ~ 1000000, default: 1]
-    I:"Value for kills"=1
+    I:"Value for kills"=5000
 }
 
 
 parasite_evolution_phases_1 {
     # Chance (1=100%) to failed to grow for Beckon SI. [range: 0.0 ~ 1.0, default: 1.0]
-    S:"Phase 1 Beckon Stage I Grow Stunned"=1.0
+    S:"Phase 1 Beckon Stage I Grow Stunned"=0.1
 
     # Chance (1=100%) to failed to grow for Beckon SII. [range: 0.0 ~ 1.0, default: 1.0]
-    S:"Phase 1 Beckon Stage II Grow Stunned"=1.0
+    S:"Phase 1 Beckon Stage II Grow Stunned"=0.3
 
     # Chance (1=100%) to failed to grow for Beckon SIII. [range: 0.0 ~ 1.0, default: 1.0]
-    S:"Phase 1 Beckon Stage III Grow Stunned"=1.0
+    S:"Phase 1 Beckon Stage III Grow Stunned"=0.5
 
     # Chance (1=100%) for crop grow to be stunned. [range: 0.0 ~ 1.0, default: 0.0]
     S:"Phase 1 Crop Grow Stunned"=0.0
@@ -2125,10 +2125,10 @@ parasite_evolution_phases_1 {
     S:"Phase 1 Mob Spawn With COTH"=0.0
 
     # Number of Points required to reach Phase 1. [range: 0 ~ 2147483640, default: 50]
-    I:"Phase 1 Points"=100
+    I:"Phase 1 Points"=1
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.0]
-    S:"Phase 1 Reinforcement System Chance"=0.0
+    S:"Phase 1 Reinforcement System Chance"=1.0
 
     # Message sent to all players in the current world when parasites reach this Phase [default: One]
     S:"Phase 1 Warning Message"=One
@@ -2164,10 +2164,10 @@ parasite_evolution_phases_2 {
     S:"Phase 2 Mob Spawn With COTH"=0.0
 
     # Number of Points required to reach Phase 2. [range: 0 ~ 2147483640, default: 100]
-    I:"Phase 2 Points"=1500
+    I:"Phase 2 Points"=1
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.0]
-    S:"Phase 2 Reinforcement System Chance"=0.02
+    S:"Phase 2 Reinforcement System Chance"=1.0
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Two]
     S:"Phase 2 Warning Message"=Two
@@ -2203,10 +2203,10 @@ parasite_evolution_phases_3 {
     S:"Phase 3 Mob Spawn With COTH"=0.0
 
     # Number of Points required to reach Phase 3. [range: 0 ~ 2147483640, default: 1000]
-    I:"Phase 3 Points"=20000
+    I:"Phase 3 Points"=1
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.02]
-    S:"Phase 3 Reinforcement System Chance"=0.045
+    S:"Phase 3 Reinforcement System Chance"=1.0
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Three]
     S:"Phase 3 Warning Message"=Three
@@ -2242,10 +2242,10 @@ parasite_evolution_phases_4 {
     S:"Phase 4 Mob Spawn With COTH"=0.2
 
     # Number of Points required to reach Phase 4. [range: 0 ~ 2147483640, default: 100000]
-    I:"Phase 4 Points"=250000
+    I:"Phase 4 Points"=1
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.03]
-    S:"Phase 4 Reinforcement System Chance"=0.05
+    S:"Phase 4 Reinforcement System Chance"=1.0
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Four]
     S:"Phase 4 Warning Message"=Four
@@ -2281,10 +2281,10 @@ parasite_evolution_phases_5 {
     S:"Phase 5 Mob Spawn With COTH"=0.5
 
     # Number of Points required to reach Phase 5. [range: 0 ~ 2147483640, default: 1000000]
-    I:"Phase 5 Points"=3000000
+    I:"Phase 5 Points"=1
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.04]
-    S:"Phase 5 Reinforcement System Chance"=0.05
+    S:"Phase 5 Reinforcement System Chance"=1.0
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Five]
     S:"Phase 5 Warning Message"=Five
@@ -2320,10 +2320,10 @@ parasite_evolution_phases_6 {
     S:"Phase 6 Mob Spawn With COTH"=0.8
 
     # Number of Points required to reach Phase 6. [range: 0 ~ 2147483640, default: 30000000]
-    I:"Phase 6 Points"=50000000
+    I:"Phase 6 Points"=1
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.05]
-    S:"Phase 6 Reinforcement System Chance"=0.06
+    S:"Phase 6 Reinforcement System Chance"=1.0
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Six]
     S:"Phase 6 Warning Message"=Six
@@ -2359,10 +2359,10 @@ parasite_evolution_phases_7 {
     S:"Phase 7 Mob Spawn With COTH"=0.4
 
     # Number of Points required to reach Phase 7. [range: 0 ~ 2147483640, default: 100000000]
-    I:"Phase 7 Points"=100000000
+    I:"Phase 7 Points"=1
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.07]
-    S:"Phase 7 Reinforcement System Chance"=0.07
+    S:"Phase 7 Reinforcement System Chance"=1.0
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Seven]
     S:"Phase 7 Warning Message"=Seven
@@ -2380,13 +2380,13 @@ parasite_evolution_phases_8 {
     S:"Phase 8 Beckon Stage III Grow Stunned"=0.0
 
     # Chance (1=100%) for crop grow to be stunned. [range: 0.0 ~ 1.0, default: 0.6]
-    S:"Phase 8 Crop Grow Stunned"=0.6
+    S:"Phase 8 Crop Grow Stunned"=1.0
 
     # Each second the killcount will go up by this amount. [range: 0.0 ~ 100.0, default: 0.35]
     S:"Phase 8 Killcount Plus"=0.35
 
     # Number of Points the parasites will lose when using a Lure Block. [range: 0 ~ 2147483640, default: 30000000]
-    I:"Phase 8 Lure Value"=30000000
+    I:"Phase 8 Lure Value"=0
 
     # If a parasite ID is equal to or greater than this number, the parasite will not spawn. [range: 0 ~ 100, default: 64]
     I:"Phase 8 Maximum Parasite ID"=64
@@ -2398,10 +2398,10 @@ parasite_evolution_phases_8 {
     S:"Phase 8 Mob Spawn With COTH"=0.8
 
     # Number of Points required to reach Phase 8. [range: 0 ~ 2147483640, default: 600000000]
-    I:"Phase 8 Points"=600000000
+    I:"Phase 8 Points"=1
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.09]
-    S:"Phase 8 Reinforcement System Chance"=0.09
+    S:"Phase 8 Reinforcement System Chance"=1.0
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Eight]
     S:"Phase 8 Warning Message"=Eight
@@ -2721,7 +2721,7 @@ reinforcement_system {
     I:"Reinforcement System Block Light Level"=15
 
     # One in X to spawn a Beckon on the Infested Block Residue (random tick). [range: 0 ~ 2147483640, default: 100000]
-    I:"Reinforcement System Block Residue Chance"=100000
+    I:"Reinforcement System Block Residue Chance"=5000
 
     # If the y value of the block is below this, Beckons will not spawn from it. [range: 0 ~ 2147483640, default: 0]
     I:"Reinforcement System Block Residue Y"=0
@@ -2734,7 +2734,7 @@ reinforcement_system {
     B:"Reinforcement System Blocks BlackList Inverted"=false
 
     # Chance (1 = 100%) to spawn a Beckon. [range: 0.0 ~ 1.0, default: 0.045]
-    S:"Reinforcement System Chance"=0.045
+    S:"Reinforcement System Chance"=0.3
 
     # Cooldown (in seconds) for the Reinforcement System spawning Beckons. [range: 1 ~ 2147483640, default: 5]
     I:"Reinforcement System Cooldown"=5
@@ -2757,7 +2757,7 @@ reinforcement_system {
      >
 
     # Max Hardness of the block it can infest. [range: 0.01 ~ 100.0, default: 1.5]
-    S:"Reinforcement System Hardness"=1.5
+    S:"Reinforcement System Hardness"=2
 
     # Set to false if you don't want the Beckons to ignore their summoning cooldown.when spawning. [default: true]
     B:"Reinforcement System Ignore Cooldown"=true
@@ -2766,7 +2766,7 @@ reinforcement_system {
     B:"Reinforcement System Infestation"=true
 
     # Chance (1 = 100%) to spawn a Beckon in Infested Blocks (S!=1) if no Beckon is around, to further infest the land. [range: 0.0 ~ 1.0, default: 0.05]
-    S:"Reinforcement System Infestation Spawning Beckons"=0.05
+    S:"Reinforcement System Infestation Spawning Beckons"=0.3
 
     # Maximum number of Beckons that can spawn from the RS (per dimension). [range: 1 ~ 2147483640, default: 100]
     I:"Reinforcement System Maximum Beckons"=100
@@ -2805,7 +2805,7 @@ reinforcement_system_beckonsi {
     S:"Stage I Beckon Armor Multiplier"=1.0
 
     # Minimum time required (in seconds) to infest nearby block for Stage I Beckon. [range: 4 ~ 10000, default: 60]
-    I:"Stage I Beckon Block Infestation Cooldown"=60
+    I:"Stage I Beckon Block Infestation Cooldown"=5
 
     # Damage when walking on the blocks infested by  Stage I Beckon. [range: 0.01 ~ 100.0, default: 1.0]
     S:"Stage I Beckon Block Infestation Damage"=1.0
@@ -2814,10 +2814,10 @@ reinforcement_system_beckonsi {
     S:"Stage I Beckon Block Infestation Damage Chance"=0.01
 
     # Block infestation radius for Stage I Beckon. [range: 0 ~ 100, default: 4]
-    I:"Stage I Beckon Block Infestation Range"=4
+    I:"Stage I Beckon Block Infestation Range"=100
 
     # Block infestation radius (upwards/downwards) for Stage I Beckon. [range: 0 ~ 100, default: 2]
-    I:"Stage I Beckon Block Infestation Range Y"=2
+    I:"Stage I Beckon Block Infestation Range Y"=5
 
     # Value of each Stage I Beckon to spawn extra mobs (the mobs will not add up to the total points) for Stage I Beckon. [range: 0.0 ~ 100.0, default: 0.5]
     S:"Stage I Beckon CA mobs"=0.5
@@ -2855,7 +2855,7 @@ reinforcement_system_beckonsi {
      >
 
     # Spawn weight for Stage I Beckon (NOTE: They will spawn like vanilla passive creatures). [range: 0 ~ 100, default: 0]
-    I:"Stage I Beckon Spawnweight"=0
+    I:"Stage I Beckon Spawnweight"=99
 
     # Number of total points used in mob spawning for Stage I Beckon. [range: 0 ~ 100, default: 4]
     I:"Stage I Beckon Total Active Mobs"=4
@@ -2867,7 +2867,7 @@ reinforcement_system_beckonsii {
     S:"Stage II Beckon Armor Multiplier"=1.0
 
     # Minimum time required (in seconds) to infest nearby block for Stage II Beckon. [range: 4 ~ 10000, default: 55]
-    I:"Stage II Beckon Block Infestation Cooldown"=55
+    I:"Stage II Beckon Block Infestation Cooldown"=5
 
     # Damage when walking on the blocks infested by  Stage II Beckon. [range: 0.01 ~ 100.0, default: 1.0]
     S:"Stage II Beckon Block Infestation Damage"=1.0
@@ -2876,10 +2876,10 @@ reinforcement_system_beckonsii {
     S:"Stage II Beckon Block Infestation Damage Chance"=0.05
 
     # Block infestation radius for Stage II Beckon. [range: 0 ~ 100, default: 8]
-    I:"Stage II Beckon Block Infestation Range"=8
+    I:"Stage II Beckon Block Infestation Range"=300
 
     # Block infestation radius (upwards/downwards) for Stage II Beckon. [range: 0 ~ 100, default: 3]
-    I:"Stage II Beckon Block Infestation Range Y"=3
+    I:"Stage II Beckon Block Infestation Range Y"=7
 
     # Value of each Stage II Beckon to spawn extra mobs (the mobs will not add up to the total points) for Stage II Beckon. [range: 0.0 ~ 100.0, default: 0.5]
     S:"Stage II Beckon CA mobs"=0.5
@@ -2934,7 +2934,7 @@ reinforcement_system_beckonsiii {
     S:"Stage III Beckon Armor Multiplier"=1.0
 
     # Minimum time required (in seconds) to infest nearby block for Stage III Beckon. [range: 4 ~ 10000, default: 50]
-    I:"Stage III Beckon Block Infestation Cooldown"=50
+    I:"Stage III Beckon Block Infestation Cooldown"=5
 
     # Damage when walking on the blocks infested by  Stage III Beckon. [range: 0.01 ~ 100.0, default: 1.0]
     S:"Stage III Beckon Block Infestation Damage"=1.0
@@ -2943,10 +2943,10 @@ reinforcement_system_beckonsiii {
     S:"Stage III Beckon Block Infestation Damage Chance"=0.1
 
     # Block infestation radius for Stage III Beckon. [range: 0 ~ 100, default: 16]
-    I:"Stage III Beckon Block Infestation Range"=16
+    I:"Stage III Beckon Block Infestation Range"=1000
 
     # Block infestation radius (upwards/downwards) for Stage III Beckon. [range: 0 ~ 100, default: 4]
-    I:"Stage III Beckon Block Infestation Range Y"=4
+    I:"Stage III Beckon Block Infestation Range Y"=10
 
     # Value of each Stage III Beckon to spawn extra mobs (the mobs will not add up to the total points) for Stage III Beckon. [range: 0.0 ~ 100.0, default: 0.35]
     S:"Stage III Beckon CA mobs"=0.35
@@ -3027,9 +3027,9 @@ reinforcement_system_beckonsiv {
     #  "1" is for the cost the entity has. 
     #  [default: [ground;srparasites:beckon_si;0.3;3], [ground;srparasites:beckon_sii;0.4;3], [ground;srparasites:beckon_siii;0.3;4]]
     S:"Stage IV Beckon Mob List" <
-        ground;srparasites:beckon_si;0.3;3
-        ground;srparasites:beckon_sii;0.4;3
-        ground;srparasites:beckon_siii;0.3;4
+        ground;srparasites:beckon_si;0.5;3
+        ground;srparasites:beckon_sii;0.6;3
+        ground;srparasites:beckon_siii;0.5;4
      >
 
     # Number of total points used in mob spawning for Stage IV Beckon. [range: 0 ~ 100, default: 12]
@@ -3208,7 +3208,7 @@ world_biome {
     S:"Biome Fog Density"=0.06
 
     # Max Hardness of the block it can spread into. [range: 0.01 ~ 100.0, default: 1.7]
-    S:"Biome Hardness"=1.7
+    S:"Biome Hardness"=2
 
     # Amount of health reduced (1=100%) for mobs and player healing in the biome. [range: 0.0 ~ 1.0, default: 0.5]
     S:"Biome Heal Penalty"=0.5
@@ -3259,10 +3259,10 @@ world_biome {
     B:"Creation of Nodes"=true
 
     # Maximum number of nodes in a world. [range: 1 ~ 100, default: 20]
-    I:"Maximum Node Number"=20
+    I:"Maximum Node Number"=90
 
     # Minimum distance that one node needs to be away from the other to appear. [range: 0 ~ 100000000, default: 10000]
-    I:"Minimum Distance Between Nodes"=1000
+    I:"Minimum Distance Between Nodes"=100
 
     # Minimum distance one node needs to be away from SpawnPoint to appear. [range: 0 ~ 100000000, default: 1]
     I:"Minimum Distance From SpawnPoint"=1
@@ -3271,37 +3271,37 @@ world_biome {
     S:"Node 1 Crop Stop"=0.3
 
     # Effect range of a Node 1. [range: 0 ~ 2147483640, default: 400]
-    I:"Node 1 Effect Range"=400
+    I:"Node 1 Effect Range"=4000
 
     # Spread range of a Node 1. [range: 0 ~ 2147483640, default: 200]
-    I:"Node 1 Spread Range"=200
+    I:"Node 1 Spread Range"=2000
 
     # Days needed from a sss to a Node 1. [range: 0 ~ 2147483640, default: 10]
-    I:"Node 1 Time Needed"=1
+    I:"Node 1 Time Needed"=0
 
     # Chance (1 = 100%) to stop crops/trees from growing naturally.(for a tick) for a Node 2 [range: 0.0 ~ 100.0, default: 0.6]
     S:"Node 2 Crop Stop"=0.6
 
     # Effect range of a Node 2. [range: 0 ~ 2147483640, default: 1600]
-    I:"Node 2 Effect Range"=160
+    I:"Node 2 Effect Range"=1600
 
     # Spread range of a Node 2. [range: 0 ~ 2147483640, default: 800]
-    I:"Node 2 Spread Range"=800
+    I:"Node 2 Spread Range"=8000
 
     # Days needed from a Node 1 to a Node 2. [range: 0 ~ 2147483640, default: 30]
-    I:"Node 2 Time Needed"=2
+    I:"Node 2 Time Needed"=0
 
     # Chance (1 = 100%) to stop crops/trees from growing naturally.(for a tick) for a Node 3 [range: 0.0 ~ 100.0, default: 1.0]
     S:"Node 3 Crop Stop"=1.0
 
     # Effect range of a Node 3. [range: 0 ~ 2147483640, default: 8000]
-    I:"Node 3 Effect Range"=8000
+    I:"Node 3 Effect Range"=80000
 
     # Spread range of a Node 3. [range: 0 ~ 2147483640, default: 4000]
-    I:"Node 3 Spread Range"=4000
+    I:"Node 3 Spread Range"=40000
 
     # Days needed from a Node 2 to a Node 3. [range: 0 ~ 2147483640, default: 60]
-    I:"Node 3 Time Needed"=1
+    I:"Node 3 Time Needed"=0
 
     # List of potion effects that the parasites will spawn with. Ex. "2;minecraft:speed;3"  Where: 
     #  "2" is the required total of node levels, 
@@ -3336,16 +3336,16 @@ world_colony {
     B:"Colonies Activated"=true
 
     # Value of the base radius of a Colony. [range: 1 ~ 10000, default: 60]
-    I:"Colonies Base Radius Value"=300
+    I:"Colonies Base Radius Value"=3000
 
     # Cap of points for a single Colony. [range: 1 ~ 10000, default: 100]
     I:"Colonies Points Cap"=100
 
     # Every x points, the colony radius will get bigger. [range: 1 ~ 10000, default: 2]
-    I:"Colonies Spread Point"=2
+    I:"Colonies Spread Point"=5000
 
     # How much the radius will grow. [range: 1 ~ 10000, default: 20]
-    I:"Colonies Spread Value"=1000
+    I:"Colonies Spread Value"=10000
 
     # Message sent to all players in the current world when a Colony is placed [default: Colony]
     S:"Colonies Warning Message"=The parasites grow even stronger!
