Initial implementation of parasitic surface

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -58,6 +58,8 @@ attributes {
         primitivemobs:flame_spewer;generic.maxHealth;0;-15
         nethercraft:camouflage_spider;generic.maxHealth;0;-20
         primitivemobs:blazing_juggernaut;generic.attackDamage;0;1
+
+        grue:entitygrue;generic.followRange;0;50
      >
 }
 
