--- a/config/scalinghealth/main.cfg
+++ b/config/scalinghealth/main.cfg
@@ -316,7 +316,7 @@ main {
             B:Invisibility=false
 
             # Let all players know when a blight dies in chat.
-            B:"Notify Players on Death"=true
+            B:"Notify Players on Death"=false
 
             # The duration (in ticks) of the potion effects applied to blights. The effects are refreshed frequently, so this value doesn't matter in most cases... except for the lingering potion effects left by blight creepers. Set to -1 for infinite time. Default is 5 minutes. [range: -1 ~ 2147483647, default: 6000]
             I:"Potion Duration"=6000
