Update mods, enable timer co-op feature by default

--- a/config/time_is_up.cfg
+++ b/config/time_is_up.cfg
@@ -17,6 +17,9 @@ configs {
     I:BlackList <
      >
 
+    # Set to true to stop the timer for all players once one of them met the conditions [default: false]
+    B:Co-op=true
+
     # Tick when the timer becomes red. [default:620] [range: 0 ~ 2147483647, default: 620]
     I:Dangerous=6000
 
@@ -46,6 +49,9 @@ configs {
 
     # When time is up, the player die if set to false or receive bad potion effects if set to true [default: false]
     B:"Potion Effects"=true
+
+    # 'BlackList' is used as a blacklist if true. [default: true]
+    B:"Use blackList"=true
 
     # Play a warning sound at these ticks. [default: [1220, 620] ]
     I:Warnings <
