Update mods, remove minimap mod, enable player mobends

--- a/config/mobends.cfg
+++ b/config/mobends.cfg
@@ -7,15 +7,22 @@ animated {
     B:"mobends-minecraft:wolf"=true
     B:"mobends-minecraft:zombie"=true
     B:"mobends-minecraft:zombie_pigman"=true
-    B:mobends-player=false
+    B:mobends-player=true
 }
 
 
 general {
     S:AppliedPacks <
      >
+    S:keepArmorAsVanilla <
+     >
+    S:keepEntityAsVanilla <
+     >
+    B:performSpinAttack=true
     B:showArrowTrails=true
     B:showSwordTrail=true
+    S:toolItems <
+     >
     S:weaponItems <
      >
 }
