--- a/config/particleculling.cfg
+++ b/config/particleculling.cfg
@@ -14,6 +14,14 @@ general {
 
     # Set this to false to disable particle culling while being in spectator mode. This is useful to take screenshots without having particles removed.
     B:cullInSpectator=true
+
+    # Set this to false to disable all of particle culling's features.
+    B:cullingEnabled=true
+
+    # Add particle classes here that should be ignored by Particle Culling.
+    # Example: To ignore Minecraft's breaking particles and any derivates, add "net.minecraft.client.particle.ParticleBreaking" to the list
+    S:ignoredParticles <
+     >
 }
 
 
