Add "Deep Stone" to the Deep Dark

--- a/config/beneath/beneath.cfg
+++ b/config/beneath/beneath.cfg
@@ -97,7 +97,7 @@ general {
     # This determines which block the terrain of The Beneath should be made out of. If you want it to be something other than stone, you can change this instead of jerry-rigging the block decorator to replace all stone.
     # Format is "modid:name:meta", where meta is optional
     # §c[Minecraft Restart Required]§r
-    S:"Terrain Block"=minecraft:stone
+    S:"Terrain Block"=quark:elder_prismarine:2
 
     # Toggles whether or not to use the built-in Block Decorator (functions like the Ore Generator, except it runs before it, and is intended for things like dirt, gravel, stone types).
     # §c[Minecraft Restart Required]§r
