--- a/config/tool_progression/block_overwrites.cfg
+++ b/config/tool_progression/block_overwrites.cfg
@@ -50,6 +50,8 @@ block {
 
     S:"minecraft:stone:*"=pickaxe=6
     S:"minecraft:cobblestone:*"=pickaxe=6
+
+    S:"quark:elder_prismarine:2"=pickaxe=6
     
 }
 
