--- a/config/tool_progression/block_overwrites.cfg
+++ b/config/tool_progression/block_overwrites.cfg
@@ -48,10 +48,16 @@ block {
     S:"erebus:ore_copper:*"=pickaxe=4
     S:"erebus:ore_jade:*"=pickaxe=5
 
+    S:"quark:elder_prismarine:2"=pickaxe=6
+
     S:"minecraft:stone:*"=pickaxe=6
     S:"minecraft:cobblestone:*"=pickaxe=6
+    S:"minecraft:mossy_cobblestone:*"=pickaxe=6
+    S:"minecraft:stained_hardened_clay:*"=pickaxe=6
+    S:"quark:biome_cobblestone:*"=pickaxe=6
+    S:"quark:slate:*"=pickaxe=6
 
-    S:"quark:elder_prismarine:2"=pickaxe=6
+    
     
 }
 
