Fix gravestone, remove old gravestone mod

--- a/config/erebus.cfg
+++ b/config/erebus.cfg
@@ -27,7 +27,7 @@ general {
     B:"Moss will naturally Spread over time"=true
     B:"Mould will naturally Spread over time"=true
     I:"Number of seconds before the portal is usable again."=5
-    B:"Play erebus songs"=true
+    B:"Play erebus songs"=false
     B:"Random mob names"=true
     B:"Should player re-spawn in dimension"=true
     B:"Spawn Black Widows in Nether"=false
