--- a/config/tool_progression/block_overwrites.cfg
+++ b/config/tool_progression/block_overwrites.cfg
@@ -7,6 +7,8 @@
 ##########################################################################################################
 
 block {
+    S:"erebus:block_of_bones:*"=null=-1
+    
     S:"erebus:umberstone:*"=pickaxe=3
     S:"erebus:umberpaver:*"=pickaxe=3
     S:"erebus:umberstone_pillar:*"=pickaxe=3
