Nerf bloody zombie HP

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -54,6 +54,7 @@ attributes {
         slime;generic.movementSpeed;1;0.5
         magma_cube;generic.movementSpeed;1;0.5
         nethercraft:dark_zombie;generic.maxHealth;0;-40;/;0
+        nethercraft:bloody_zombie;generic.maxHealth;0;-20
         primitivemobs:blazing_juggernaut;generic.maxHealth;0;-10
         primitivemobs:flame_spewer;generic.maxHealth;0;-15
         nethercraft:camouflage_spider;generic.maxHealth;0;-20
