remove bewitched tome

--- a/config/primitivemobs/primitivemobs.cfg
+++ b/config/primitivemobs/primitivemobs.cfg
@@ -8,7 +8,7 @@
 
 "mob activation settings" {
     # Enable/Disable the Bewitched Tome
-    B:"Enable Bewitched Tome"=true
+    B:"Enable Bewitched Tome"=false
 
     # Enable/Disable the Blazing Juggernaut
     B:"Enable Blazing Juggernaut"=true
