disable ruins, hot spring generation

--- a/config/simplyhotsprings.cfg
+++ b/config/simplyhotsprings.cfg
@@ -69,7 +69,7 @@ general {
         B:"Generation Debug"=false
 
         # Set to false to stop hot springs from generating.
-        B:"World Generation"=true
+        B:"World Generation"=false
     }
 
 }
