change startup sound

--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -191,7 +191,7 @@ general {
 
     # Possible sounds to play when client finishes loading and reaches the main game menu [default: [minecraft:entity.experience_orb.pickup], [minecraft:entity.chicken.egg]]
     S:"Startup Sound List" <
-        minecraft:entity.experience_orb.pickup
+        minecraft:entity.lightning.thunder
      >
 }
 
@@ -210,7 +210,7 @@ logging {
     B:"Enable Debug Logging"=false
 
     # Enables/disables display of version check information [default: true]
-    B:"Enable Online Version Check"=true
+    B:"Enable Online Version Check"=false
 
     # Enables/disables reporting of server TPS and memory stats (has to be enabled server side as well) [default: false]
     B:"Report Server Stats"=false
