buff diamond, adjust mining levels

--- a/config/materialchanger.cfg
+++ b/config/materialchanger.cfg
@@ -117,6 +117,11 @@ changer {
         ATTACK_DAMAGE;erebus:jade_pickaxe;6.5
         DURABILITY;erebus:jade_pickaxe;5000
         
+        HARVEST_LEVEL;minecraft:diamond_pickaxe;7
+        EFFICIENCY;minecraft:diamond_pickaxe;10
+        ATTACK_DAMAGE;minecraft:diamond_pickaxe;7
+        DURABILITY;minecraft:diamond_pickaxe;10000
+        
         
         
         EFFICIENCY;atop:mud_axe;8.5
@@ -130,6 +135,10 @@ changer {
         EFFICIENCY;erebus:jade_axe;9.5
         ATTACK_DAMAGE;erebus:jade_axe;10.5
         DURABILITY;erebus:jade_axe;5000
+        
+        EFFICIENCY;minecraft:diamond_axe;10
+        ATTACK_DAMAGE;minecraft:diamond_axe;15.5
+        DURABILITY;minecraft:diamond_axe;10000
         
         
         
@@ -145,6 +154,10 @@ changer {
         ATTACK_DAMAGE;erebus:jade_shovel;7
         DURABILITY;erebus:jade_shovel;5000
         
+        EFFICIENCY;minecraft:diamond_shovel;10
+        ATTACK_DAMAGE;minecraft:diamond_shovel;7.5
+        DURABILITY;minecraft:diamond_shovel;10000
+        
         
         
         ATTACK_DAMAGE;atop:mud_sword;8
@@ -156,6 +169,9 @@ changer {
         ATTACK_DAMAGE;erebus:jade_sword;10
         DURABILITY;erebus:jade_sword;5000
         
+        ATTACK_DAMAGE;minecraft:diamond_sword;15
+        DURABILITY;minecraft:diamond_sword;10000
+        
         
         
         ARMOR_PROTECTION;atop:topaz_helmet;3
@@ -166,10 +182,10 @@ changer {
         ARMOR_TOUGHNESS;atop:topaz_leggings;1
         ARMOR_PROTECTION;atop:topaz_boots;3
         ARMOR_TOUGHNESS;atop:topaz_boots;1
-        DURABILITY;atop:topaz_helmet;300
-        DURABILITY;atop:topaz_chestplate;300
-        DURABILITY;atop:topaz_leggings;300
-        DURABILITY;atop:topaz_boots;300
+        DURABILITY;atop:topaz_helmet;600
+        DURABILITY;atop:topaz_chestplate;600
+        DURABILITY;atop:topaz_leggings;600
+        DURABILITY;atop:topaz_boots;600
         
         ARMOR_PROTECTION;erebus:jade_helmet;4
         ARMOR_TOUGHNESS;erebus:jade_helmet;2
@@ -179,11 +195,24 @@ changer {
         ARMOR_TOUGHNESS;erebus:jade_leggings;2
         ARMOR_PROTECTION;erebus:jade_boots;4
         ARMOR_TOUGHNESS;erebus:jade_boots;2
-        DURABILITY;erebus:jade_helmet;600
-        DURABILITY;erebus:jade_chestplate;600
-        DURABILITY;erebus:jade_leggings;600
-        DURABILITY;erebus:jade_boots;600
+        DURABILITY;erebus:jade_helmet;1200
+        DURABILITY;erebus:jade_chestplate;1200
+        DURABILITY;erebus:jade_leggings;1200
+        DURABILITY;erebus:jade_boots;1200
         
+        
+        ARMOR_PROTECTION;minecraft:diamond_helmet;6
+        ARMOR_TOUGHNESS;minecraft:diamond_helmet;4
+        ARMOR_PROTECTION;minecraft:diamond_chestplate;10
+        ARMOR_TOUGHNESS;minecraft:diamond_chestplate;4
+        ARMOR_PROTECTION;minecraft:diamond_leggings;9
+        ARMOR_TOUGHNESS;minecraft:diamond_leggings;4
+        ARMOR_PROTECTION;minecraft:diamond_boots;6
+        ARMOR_TOUGHNESS;minecraft:diamond_boots;4
+        DURABILITY;minecraft:diamond_helmet;3000
+        DURABILITY;minecraft:diamond_chestplate;3000
+        DURABILITY;minecraft:diamond_leggings;3000
+        DURABILITY;minecraft:diamond_boots;3000
         
      >
 }
