Fix mining levels

--- a/config/materialchanger.cfg
+++ b/config/materialchanger.cfg
@@ -100,7 +100,7 @@ changer {
         ATTACK_SPEED;erebus:jade_axe;0.4
         
         
-        
+        HARVEST_LEVEL;nethercraft:pyridium_pickaxe;3
         
         HARVEST_LEVEL;atop:mud_pickaxe;4
         EFFICIENCY;atop:mud_pickaxe;8.5
