--- a/config/tool_progression/block_overwrites.cfg
+++ b/config/tool_progression/block_overwrites.cfg
@@ -51,8 +51,8 @@ block {
     S:"erebus:ore_jade:*"=pickaxe=5
 
     S:"quark:elder_prismarine:2"=pickaxe=6
-    S:"minecraft:diamond_ore"=pickaxe=6
-    S:"minecraft:coal_ore"=pickaxe=6
+    S:"minecraft:diamond_ore:*"=pickaxe=6
+    S:"minecraft:coal_ore:*"=pickaxe=6
 
     S:"minecraft:stone:*"=pickaxe=7
     S:"minecraft:cobblestone:*"=pickaxe=7
