--- a/config/tool_progression/tool_overwrites.cfg
+++ b/config/tool_progression/tool_overwrites.cfg
@@ -7,6 +7,9 @@
 ##########################################################################################################
 
 tool {
+    S:"nethercraft:pyridium_pickaxe"=pickaxe=3
+    S:"nethercraft:pyridium_axe"=axe=3
+    S:"nethercraft:pyridium_shovel"=shovel=3
 }
 
 
