Fix erebus white water with shaders

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ usernamecache.json
 mods/OptiFine_1.16.5_HD_U_G7.jar
 /crash-reports
 optionsshaders.txt
-/shaderpacks
 /XaeroWaypoints
 XaeroWaypoints_*
 crafttweaker.log
@@ -37,3 +36,4 @@ concheckrmd
 servers.dat
 /resourcepacks/Green Screen Custom Sky UNIVERSAL/
 mods/Green Screens 2.0.jar
+shaderpacks/Chocapic13_V9.1_Extreme_beta_5.zip
