--- a/config/time_is_up.cfg
+++ b/config/time_is_up.cfg
@@ -91,12 +91,11 @@ effects {
     # Cooldown before applying effects. [80 ticks by default] [range: 1 ~ 2147483647, default: 80]
     I:"effects cooldown"=80
 
-    # Sets effects for emergency phase. format : effectId;duration;amplifier;show_icon [default: [minecraft:slowness;120;1;true], [minecraft:mining_fatigue;120;0;true], [minecraft:poison;120;0;true], [minecraft:hunger;120;0;true]]
+    # Sets effects for emergency phase. format : effectId;duration;amplifier;show_icon [default: [minecraft:slowness;120;1;true], [minecraft:mining_fatigue;120;0;true], [minecraft:poison;120;0;true], [minecraft:hunger;120;0;true], [timeisup:frailty_effect;120;0;true]]
     S:"emergency effects" <
-        timeisup:doom_effect;300;0;true
      >
 
-    # Sets effects for when the time is up. format : effectId;duration;amplifier;show_icon [default: [minecraft:slowness;120;3;true], [minecraft:mining_fatigue;120;1;true], [minecraft:poison;120;2;true], [minecraft:hunger;120;1;true]]
+    # Sets effects for when the time is up. format : effectId;duration;amplifier;show_icon [default: [minecraft:slowness;120;3;true], [minecraft:mining_fatigue;120;1;true], [minecraft:poison;120;2;true], [minecraft:hunger;120;1;true], [timeisup:frailty_effect;120;1;true]]
     S:"time is up effects" <
         minecraft:mining_fatigue;999;3;true
         minecraft:poison;999;1;true
